--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 <a href="#" class="btn">Sign up</a>
             </div>
             <div class="home-img">
-                <img src="c:\Users\avini\Downloads\home.jpg" alt="">
-                <img src="c:\Users\avini\Downloads\finance.jpg" alt="">
-                <img src="c:\Users\avini\Downloads\trade2.jpg" alt="">
+                <img src="https://github.com/Saket8538/Grow-stock/blob/main/img/home.jpg" alt="">
+                <img src="https://github.com/Saket8538/Grow-stock/blob/main/img/finance.jpg" alt="">
+                <img src="https://github.com/Saket8538/Grow-stock/blob/main/img/trade2.jpg" alt="">
             </div>
         </section>
         <section class="about" id="about">
@@ -83,7 +83,7 @@
             <h2 class="heading">Latest <span>Strategy</span></h2>
             <div class="strategy-container">
                 <div class="strategy-box">
-                    <img src="c:\Users\avini\Downloads\trading background.png"alt="">
+                    <img src="https://github.com/Saket8538/Grow-stock/blob/main/img/trading background.png"alt="">
                     <div class="strategy-layer" >
                         <h4>Risk Tolerance</h4>
                         <p>Assess how much risk you are willing to take. Some strategies involve higher risk (and potential reward), while others prioritize capital preservation.</p>
@@ -91,7 +91,7 @@
                     </div>
                 </div>
                 <div class="strategy-box">
-                    <img src="c:\Users\avini\Downloads\trade1.jpg"alt="">
+                    <img src="https://github.com/Saket8538/Grow-stock/blob/main/img/trade1.jpg"alt="">
                     <div class="strategy-layer">
                         <h4>Trading Style</h4>
                         <p>Before developing a strategy, consider your preferred trading style. Are you a day trader, swing trader, or long-term investor?
@@ -100,7 +100,7 @@
                     </div>
                 </div>
                 <div class="strategy-box">
-                    <img src="c:\Users\avini\Downloads\finance.jpg"alt="">
+                    <img src="https://github.com/Saket8538/Grow-stock/blob/main/img/finance.jpg"alt="">
                     <div class="strategy-layer">
                         <h4>Time Horizon</h4>
                         <p>Decide whether you want to trade intraday(within a day), over a few days (swing trading), or hold positions for longer periods (long-term investing).</p>
@@ -108,7 +108,7 @@
                     </div>
                 </div>
                 <div class="strategy-box">
-                    <img src="c:\Users\avini\Downloads\trade2.jpg"alt="">
+                    <img src="https://github.com/Saket8538/Grow-stock/blob/main/img/trade2.jpg"alt="">
                     <div class="strategy-layer">
                         <h4>Financial Goals </h4>
                         <p>Clarify your objectives. Are you aiming for consistent small gains, large profits, or steady long-term growth?</p>
